[tool.poetry]
name = "landscape"
version = "0.1.0"
description = ""
authors = ["ninabarzh <30133030+ninabarzh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.5"
mkdocs-monorepo-plugin = "^1.0.5"
mkdocs-material = "^9.4.14"
mkdocs-git-revision-date-plugin = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
